--- a/how-this-blog-works.html
+++ b/how-this-blog-works.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org07e6edf" class="outline-2">
-<h2 id="org07e6edf">How this blog works</h2>
-<div class="outline-text-2" id="text-org07e6edf">
+<div id="outline-container-org06f7713" class="outline-2">
+<h2 id="org06f7713">How this blog works</h2>
+<div class="outline-text-2" id="text-org06f7713">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
@@ -26,9 +26,9 @@ nicely.
 </p>
 </div>
 
-<div id="outline-container-orga78b431" class="outline-3">
-<h3 id="orga78b431">Org mode</h3>
-<div class="outline-text-3" id="text-orga78b431">
+<div id="outline-container-orgbd4c8af" class="outline-3">
+<h3 id="orgbd4c8af">Org mode</h3>
+<div class="outline-text-3" id="text-orgbd4c8af">
 <p>
 Org mode is a markup format that comes from the Emacs world (although it is used outside
 Emacs as well). It's nice to write in because the marked-up text is still very clean 
@@ -76,9 +76,9 @@ convert my blog posts to html.
 </div>
 
 
-<div id="outline-container-org9f88439" class="outline-3">
-<h3 id="org9f88439">Github pages</h3>
-<div class="outline-text-3" id="text-org9f88439">
+<div id="outline-container-org9235cb0" class="outline-3">
+<h3 id="org9235cb0">Github pages</h3>
+<div class="outline-text-3" id="text-org9235cb0">
 <p>
 You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>. Github pages detects the <code>index.html</code>, which then links to the 
 other files.
@@ -86,9 +86,9 @@ other files.
 </div>
 </div>
 
-<div id="outline-container-orgaa78d19" class="outline-3">
-<h3 id="orgaa78d19">Thanks</h3>
-<div class="outline-text-3" id="text-orgaa78d19">
+<div id="outline-container-orgd941a6e" class="outline-3">
+<h3 id="orgd941a6e">Thanks</h3>
+<div class="outline-text-3" id="text-orgd941a6e">
 <p>
 This was inspired by <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a>. So thanks to David for that and all his great content.
 </p>
