--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org9999d6d" class="outline-2">
-<h2 id="org9999d6d">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org9999d6d">
+<div id="outline-container-org590263b" class="outline-2">
+<h2 id="org590263b">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org590263b">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org3f62836" class="outline-3">
-<h3 id="org3f62836">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-org3f62836">
+<div id="outline-container-org6272a89" class="outline-3">
+<h3 id="org6272a89">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-org6272a89">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-org1205743" class="outline-4">
-<h4 id="org1205743">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-org1205743">
+<div id="outline-container-org5efab16" class="outline-4">
+<h4 id="org5efab16">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-org5efab16">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-org2fcba41" class="outline-4">
-<h4 id="org2fcba41">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-org2fcba41">
+<div id="outline-container-org2ff156e" class="outline-4">
+<h4 id="org2ff156e">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org2ff156e">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-orgbe2b6d8" class="outline-3">
-<h3 id="orgbe2b6d8">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-orgbe2b6d8">
+<div id="outline-container-org66d3608" class="outline-3">
+<h3 id="org66d3608">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-org66d3608">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-org093d5c7" class="outline-3">
-<h3 id="org093d5c7">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-org093d5c7">
+<div id="outline-container-org37be27b" class="outline-3">
+<h3 id="org37be27b">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-org37be27b">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org9a7121a" class="outline-3">
-<h3 id="org9a7121a">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org9a7121a">
+<div id="outline-container-org482eb4c" class="outline-3">
+<h3 id="org482eb4c">SSB Modulation</h3>
+<div class="outline-text-3" id="text-org482eb4c">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-orga4e364d" class="outline-3">
-<h3 id="orga4e364d">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-orga4e364d">
+<div id="outline-container-orgac6aca8" class="outline-3">
+<h3 id="orgac6aca8">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-orgac6aca8">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-orgecd19d7" class="outline-4">
-<h4 id="orgecd19d7">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-orgecd19d7">
+<div id="outline-container-org87a0755" class="outline-4">
+<h4 id="org87a0755">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-org87a0755">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-orgec7ed96" class="outline-3">
-<h3 id="orgec7ed96">Aliasing</h3>
-<div class="outline-text-3" id="text-orgec7ed96">
+<div id="outline-container-org2f6c3dd" class="outline-3">
+<h3 id="org2f6c3dd">Aliasing</h3>
+<div class="outline-text-3" id="text-org2f6c3dd">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-orgcaf071d" class="outline-3">
-<h3 id="orgcaf071d">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-orgcaf071d">
+<div id="outline-container-org8906cdc" class="outline-3">
+<h3 id="org8906cdc">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-org8906cdc">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
