--- a/dft.html
+++ b/dft.html
@@ -39,9 +39,9 @@
 </p>
 
 
-<div id="outline-container-org8f702bc" class="outline-2">
-<h2 id="org8f702bc">Discrete Fourier Transform</h2>
-<div class="outline-text-2" id="text-org8f702bc">
+<div id="outline-container-org40791dc" class="outline-2">
+<h2 id="org40791dc">Discrete Fourier Transform</h2>
+<div class="outline-text-2" id="text-org40791dc">
 <p>
 This is just my understanding / intuitive explanation of what this algorithm means.
 </p>
@@ -74,9 +74,9 @@ and phase?"</i></li>
 </ul>
 </div>
 
-<div id="outline-container-orgb49ee85" class="outline-3">
-<h3 id="orgb49ee85">A Roundabout Introduction</h3>
-<div class="outline-text-3" id="text-orgb49ee85">
+<div id="outline-container-org77bc577" class="outline-3">
+<h3 id="org77bc577">A Roundabout Introduction</h3>
+<div class="outline-text-3" id="text-org77bc577">
 <p>
 <a href="https://en.wikipedia.org/wiki/Joseph_Fourier">Joseph Fourier</a>
 was a French mathematician who was doing his thing at the end of the 18th to
@@ -90,9 +90,9 @@ sinusoids.
 </p>
 </div>
 
-<div id="outline-container-orgbe030b5" class="outline-4">
-<h4 id="orgbe030b5">Sinusoids, circles and epicycles</h4>
-<div class="outline-text-4" id="text-orgbe030b5">
+<div id="outline-container-orgc9a1fba" class="outline-4">
+<h4 id="orgc9a1fba">Sinusoids, circles and epicycles</h4>
+<div class="outline-text-4" id="text-orgc9a1fba">
 <p>
 Let's start by thinking of a sinusoid as an aspect of circular movement
 in relation to time. As we probably all learned in school at some stage,
@@ -183,9 +183,9 @@ here, and the end result is intuitive.
 </div>
 </div>
 
-<div id="outline-container-org16d7dd5" class="outline-4">
-<h4 id="org16d7dd5">Amplitude and Phase</h4>
-<div class="outline-text-4" id="text-org16d7dd5">
+<div id="outline-container-orge3ac8ce" class="outline-4">
+<h4 id="orge3ac8ce">Amplitude and Phase</h4>
+<div class="outline-text-4" id="text-orge3ac8ce">
 <p>
 What we do need is a method to find out <b>which sinusoids</b> are in a given
 signal. Just the frequency of those sinusoids isn't enough information.
@@ -241,9 +241,9 @@ of the article
 </div>
 </div>
 
-<div id="outline-container-org10e8fc2" class="outline-3">
-<h3 id="org10e8fc2">Imaginary and Complex Numbers</h3>
-<div class="outline-text-3" id="text-org10e8fc2">
+<div id="outline-container-org27d84ce" class="outline-3">
+<h3 id="org27d84ce">Imaginary and Complex Numbers</h3>
+<div class="outline-text-3" id="text-org27d84ce">
 <p>
 \[i = \sqrt{−1}\]
 </p>
@@ -321,9 +321,9 @@ boot up some other concepts we'll need.
 </div>
 </div>
 
-<div id="outline-container-orge330d5a" class="outline-3">
-<h3 id="orge330d5a">Euler's Number</h3>
-<div class="outline-text-3" id="text-orge330d5a">
+<div id="outline-container-org98dbdb7" class="outline-3">
+<h3 id="org98dbdb7">Euler's Number</h3>
+<div class="outline-text-3" id="text-org98dbdb7">
 <p>
 Usually known as simply e, Euler's number is a mathematical constant.
 It's a real,
@@ -334,9 +334,9 @@ how we get to e through an analogy to compound interest.
 </p>
 </div>
 
-<div id="outline-container-org317453e" class="outline-4">
-<h4 id="org317453e">Growth</h4>
-<div class="outline-text-4" id="text-org317453e">
+<div id="outline-container-orgd475fd8" class="outline-4">
+<h4 id="orgd475fd8">Growth</h4>
+<div class="outline-text-4" id="text-orgd475fd8">
 <p>
 This section seems pretty unrelated at first, but it's actually key to
 understanding the DFT. I should add that this bank loan analogy is just
@@ -453,7 +453,7 @@ help us make a tool for seeking out sinusoids in a signal.
 </div>
 </div>
 
-<div id="outline-container-org2f85091" class="outline-4">
+<div id="outline-container-org74851ce" class="outline-4">
 <h4 id="imaginary-growth-is-anticlockwise-rotation">Imaginary Growth is Anticlockwise Rotation</h4>
 <div class="outline-text-4" id="text-imaginary-growth-is-anticlockwise-rotation">
 <p>
@@ -508,9 +508,9 @@ The upshot is we can use e to make circles. This is the basis of the
 </div>
 </div>
 
-<div id="outline-container-org0070e7a" class="outline-3">
-<h3 id="org0070e7a">Complex sinusoid</h3>
-<div class="outline-text-3" id="text-org0070e7a">
+<div id="outline-container-org0cf0452" class="outline-3">
+<h3 id="org0cf0452">Complex sinusoid</h3>
+<div class="outline-text-3" id="text-org0cf0452">
 <p>
 The complex sinusoid is really just the sum of two sinusoids, one real
 and one imaginary. These two sinusoids are in <i>phase quadrature</i>, which
@@ -588,9 +588,9 @@ Using a complex sinusoid helps us keep it all compact and tidy.
 </div>
 </div>
 
-<div id="outline-container-org0d3649c" class="outline-3">
-<h3 id="org0d3649c">The Discrete Fourier Transform</h3>
-<div class="outline-text-3" id="text-org0d3649c">
+<div id="outline-container-org35c1233" class="outline-3">
+<h3 id="org35c1233">The Discrete Fourier Transform</h3>
+<div class="outline-text-3" id="text-org35c1233">
 <p>
 We've got all the bits we need! We're going to just dive in:
 </p>
@@ -686,9 +686,9 @@ You may be asking yourself&#x2026;
 </p>
 </div>
 
-<div id="outline-container-org4e39d94" class="outline-4">
-<h4 id="org4e39d94">Why are we multiplying our input signal by sinusoids?</h4>
-<div class="outline-text-4" id="text-org4e39d94">
+<div id="outline-container-org266e21e" class="outline-4">
+<h4 id="org266e21e">Why are we multiplying our input signal by sinusoids?</h4>
+<div class="outline-text-4" id="text-org266e21e">
 <p>
 The complex sinusoid is different for each bin. It's frequency is set by
 k. This complex sinusoid hunts for a sinusoid that matches it in our
@@ -760,9 +760,9 @@ through some examples:
 </div>
 </div>
 
-<div id="outline-container-orgc55ff11" class="outline-4">
-<h4 id="orgc55ff11">Examples</h4>
-<div class="outline-text-4" id="text-orgc55ff11">
+<div id="outline-container-org790245f" class="outline-4">
+<h4 id="org790245f">Examples</h4>
+<div class="outline-text-4" id="text-org790245f">
 <p>
 We'll start with a signal to test. Here's a signal made from two
 sinusoids. We'll use the just the real part of the DFT to find out which
@@ -857,7 +857,7 @@ a static frequency spectrum of that sound.
 </div>
 </div>
 
-<div id="outline-container-org06a3ccf" class="outline-3">
+<div id="outline-container-orge9d33d6" class="outline-3">
 <h3 id="some-properties-of-the-dft">Some Properties of the DFT</h3>
 <div class="outline-text-3" id="text-some-properties-of-the-dft">
 <p>
@@ -915,7 +915,7 @@ you'll have to divide it by N.
 </div>
 </div>
 
-<div id="outline-container-org0504b42" class="outline-3">
+<div id="outline-container-orga5a1c41" class="outline-3">
 <h3 id="where-next">Where next?</h3>
 <div class="outline-text-3" id="text-where-next">
 <p>
