--- a/how-this-blog-works.html
+++ b/how-this-blog-works.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org34bbeae" class="outline-2">
-<h2 id="org34bbeae">How this blog works</h2>
-<div class="outline-text-2" id="text-org34bbeae">
+<div id="outline-container-org16ecd0e" class="outline-2">
+<h2 id="org16ecd0e">How this blog works</h2>
+<div class="outline-text-2" id="text-org16ecd0e">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
@@ -26,9 +26,9 @@ nicely.
 </p>
 </div>
 
-<div id="outline-container-org983438d" class="outline-3">
-<h3 id="org983438d">Org mode</h3>
-<div class="outline-text-3" id="text-org983438d">
+<div id="outline-container-org5da4683" class="outline-3">
+<h3 id="org5da4683">Org mode</h3>
+<div class="outline-text-3" id="text-org5da4683">
 <p>
 Org mode is a markup format that comes from the Emacs world (although it is used outside
 Emacs as well). It's nice to write in because the marked-up text is still very clean 
@@ -76,9 +76,9 @@ convert my blog posts to html.
 </div>
 
 
-<div id="outline-container-orgd9b0007" class="outline-3">
-<h3 id="orgd9b0007">Github pages</h3>
-<div class="outline-text-3" id="text-orgd9b0007">
+<div id="outline-container-org3d381b1" class="outline-3">
+<h3 id="org3d381b1">Github pages</h3>
+<div class="outline-text-3" id="text-org3d381b1">
 <p>
 You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>. Github pages detects the <code>index.html</code>, which then links to the 
 other files.
@@ -86,9 +86,9 @@ other files.
 </div>
 </div>
 
-<div id="outline-container-orgfb6dc22" class="outline-3">
-<h3 id="orgfb6dc22">Thanks</h3>
-<div class="outline-text-3" id="text-orgfb6dc22">
+<div id="outline-container-org193a961" class="outline-3">
+<h3 id="org193a961">Thanks</h3>
+<div class="outline-text-3" id="text-org193a961">
 <p>
 This was inspired by <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a>. So thanks to David for that and all his great content.
 </p>
