--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-org970fc99" class="outline-2">
-<h2 id="org970fc99">404 - page not found</h2>
-<div class="outline-text-2" id="text-org970fc99">
+<div id="outline-container-orga138120" class="outline-2">
+<h2 id="orga138120">404 - page not found</h2>
+<div class="outline-text-2" id="text-orga138120">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
