--- a/convolution.html
+++ b/convolution.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org3544108" class="outline-2">
-<h2 id="org3544108">Convolution</h2>
-<div class="outline-text-2" id="text-org3544108">
+<div id="outline-container-org5253223" class="outline-2">
+<h2 id="org5253223">Convolution</h2>
+<div class="outline-text-2" id="text-org5253223">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -46,9 +46,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-org596b279" class="outline-3">
-<h3 id="org596b279">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-org596b279">
+<div id="outline-container-org5daf81f" class="outline-3">
+<h3 id="org5daf81f">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-org5daf81f">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -150,9 +150,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-org41c13c3" class="outline-3">
-<h3 id="org41c13c3">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-org41c13c3">
+<div id="outline-container-org92ebcef" class="outline-3">
+<h3 id="org92ebcef">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-org92ebcef">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -176,9 +176,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-orgd6070f9" class="outline-3">
-<h3 id="orgd6070f9">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-orgd6070f9">
+<div id="outline-container-orgc798739" class="outline-3">
+<h3 id="orgc798739">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-orgc798739">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -319,9 +319,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-orgbe09af0" class="outline-3">
-<h3 id="orgbe09af0">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-orgbe09af0">
+<div id="outline-container-org4ecb2b6" class="outline-3">
+<h3 id="org4ecb2b6">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-org4ecb2b6">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -339,7 +339,7 @@ and the other as the input.
 </div>
 </div>
 
-<div id="outline-container-orgbb6058b" class="outline-3">
+<div id="outline-container-org3cf493a" class="outline-3">
 <h3 id="impulse-responses">Impulse Responses</h3>
 <div class="outline-text-3" id="text-impulse-responses">
 <p>
